# apicize

./: .gitignore  CHANGELOG.md  NOT-YET.md  README.md  TODOs.md  package-lock.json  package.json
.bin/: concurrently.js
.github/workflows/: main.yml
@apicize/app/: forge.config.js  forge.config.js.map  package.json  tsconfig.json  webpack.main.config.js  webpack.main.config.js.map  webpack.plugins.js  webpack.plugins.js.map  webpack.renderer.config.js  webpack.renderer.config.js.map  webpack.rules.js  webpack.rules.js.map
@apicize/app.old/: package.json  webpack.renderer.config.ts
@apicize/app.old/src/renderer/: events.tsx  main.tsx  preload.d.ts  renderer.ts
@apicize/app/src-tauri/: Cargo.toml  demo.apicize  tauri.conf.json
@apicize/app/src-tauri/capabilities/: migrated.json
@apicize/app/src-tauri/examples/: demo.apicize
@apicize/app/src-tauri/help/: home.md  requests.md  running-tests.md
@apicize/app/src-tauri/src/: main.rs
@apicize/app/src/app/: app-store.ts  globals.css  layout.tsx  page.tsx  pane.tsx
@apicize/app/src/main/: main.ts  menu.ts  preload.ts
@apicize/app/src/renderer/: app.css  app.tsx  events.tsx  index.html  main.tsx
@apicize/cli/: Cargo.toml  README.md  index.mts  package.json  test.js  test.min.js  tsconfig.json
@apicize/cli/rust/: Cargo.toml
@apicize/cli/rust/src/: framework.js  main.rs
@apicize/cli/src/: main.rs
@apicize/common/: package.json  tsconfig.tsbuildinfo
@apicize/common/src/: events.ts  index.ts
@apicize/common/src/models/: workbook-execution.ts
@apicize/common/test/helpers/: request-helper.test.ts
@apicize/definitions/: package.json  tsconfig.json
@apicize/definitions/src/: events.ts  index.ts
@apicize/definitions/src/helpers/: request-helper.ts
@apicize/definitions/src/models/: editable.ts  identifiable.ts  request-authorization.ts  result.ts  settings.ts  test-request.ts  test-response.ts
@apicize/definitions/src/services/: auth-provider.ts  dispatcher.ts  request-runner.ts  storage-provider.ts
@apicize/definitions/test/: setup.ts  tsconfig.json
@apicize/definitions/test/helpers/: request-helper.test.ts
@apicize/engine/: package.json  tsconfig.json  tsconfig.tsbuildinfo
@apicize/engine/src/: index.ts
@apicize/engine/src/services/: fetch-dispatcher.ts  local-request-runner.ts  local-storage-provider.ts  local-storage-provider.ts.zzz  request-preparation.ts  settings-provider.ts  test-evaluation-service.ts  test-runner.ts
@apicize/lib-rust/: Cargo.toml  README.md
@apicize/lib-rust/src/: lib.rs  models.rs  oauth2.rs  oauth2_client_tokens.rs
@apicize/lib-rust/src/models/: apicize.rs  settings.rs  shared.rs  utility.rs  workbook.rs  workspace.rs
@apicize/lib-rust/src/static/: framework.min.js  routines.js
@apicize/lib-rust/src/static/src/: index.js  webpack.config.js
@apicize/lib-typescript/: README.Md  package.json  tsconfig.json
@apicize/lib-typescript/src/: index.ts
@apicize/lib-typescript/src/models/: executable.ts  identifiable.ts  indexed-entities.ts  indexed-nested-entities.ts  named.ts  persistence.ts  selection.ts  workspace.ts
@apicize/rust/cli/: Cargo.toml
@apicize/rust/cli/data/: test.json
@apicize/rust/cli/src/: main.rs
@apicize/rust/lib/: Cargo.toml
@apicize/rust/lib/src/: lib.rs  models.rs  oauth2_client_flow.rs
@apicize/toolkit/: LEARNINGS.md  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
@apicize/toolkit/.bin/: copy-assets.js
@apicize/toolkit/src/: events.ts  index.ts
@apicize/toolkit/src/contexts/: clipboard-context.tsx  clipboard.context.tsx  confirmation.context.tsx  execution-context.tsx  fake-context.tsx  feedback.context.tsx  file-operations.context.tsx  help-context.tsx  navigation-content-context.tsx  navigation-state-context.tsx  root.context.tsx  toast.context.tsx  window-context.tsx  workbook-storage-context.tsx  workspace-context.tsx  workspace.context.tsx
@apicize/toolkit/src/controls/: editor-title.tsx  fake-viewer.tsx  help.tsx  logo.tsx  navigation.tsx  run-toolbar.tsx  styles.css  toast.tsx
@apicize/toolkit/src/dialogs/: alert-dialog.js  alert-dialog.js.map  alert-dialog.tsx  confirm-dialog.tsx  dialogs.css  file-dialog.tsx
@apicize/toolkit/src/models/: editable.ts  global-storage.ts  hierarchical.ts  navigation-list-item.ts  opened-workbook.ts  state-storage.ts  store.ts  toast-request.ts
@apicize/toolkit/src/services/: apicize-serializer.ts  confirmation-service.tsx  generate-identifier.ts  random-identifier-generator.d.ts  random-identifier-generator.d.ts.map  random-identifier-generator.js  random-identifier-generator.ts  toast-service.tsx  workbook-serializer.ts
@apicize/toolkit/src/stores/: execution.store.ts  root.store.ts  window.store.ts  workspace.store.ts
@apicize/ui/: package.json  tsconfig.json
@apicize/ui/src-tauri/: Cargo.toml  tauri.conf.json
@apicize/ui/src-tauri/src/: main.rs
@apicize/ui/src/app/: page.tsx
app/: index.html  package.json  tsconfig.json
app/examples/: demo.apicize
app/src/: globals.css  main.tsx  page.tsx  pane.tsx
app/src-tauri/: Cargo.toml  demo.apicize  tauri.conf.json
app/src-tauri/capabilities/: migrated.json  migrated.json.bak
app/src-tauri/help/: architecture.md  authorizations.md  certificates.md  groups.md  home.md  parameter-storage.md  proxies.md  requests.md  running-tests.md  scenarios.md  testing.md  workbooks.md
app/src-tauri/help/authorization/: api-key.md  basic.md  oauth2-client.md
app/src-tauri/help/requests/: body.md  headers.md  info.md  query.md  test.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/app/: .example.tsx  globals.css  layout.tsx  page.tsx  pane.tsx
app/src/controls/: confirmation-dialog.tsx  toast.tsx
app/src/providers/: apicize-tauri-provider.tsx  apicize-tauri.provider.tsx  clipboard.provider.tsx  confirmation.provider.tsx  feedback.provider.tsx  file-operations.provider.tsx  toast.provider.tsx  workspace.provider.tsx
sample-api/: Dockerfile  docker-compose.yml  image.js  index.js  package-lock.json  package.json  quote.js
tools/: index.js  package.json  webpack.config.js
(+129 files in other folders)
