[package]
name = "apicize-run"
version = "0.1.1"
description = "Apicize CLI test runner"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apicize_lib = { path = "../lib-rust", version = "^0.2.0" }
serde_json = "1.0.110"
tokio = "1.35.1"
