[env]
RUST_BACKTRACE = "1"

[package]
name = "apicize_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.35.0", features = ["macros"] }
futures = "0.3.29"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
serde = { version = "1.0.193", features = ["derive"] }
mime = "0.3.17"
encoding_rs = "0.8.33"
serde_with = { version = "3.4.0", features = ["base64"] }
async-recursion = "1.0.5"
uuid = { version = "1.6.1", features = ["v4"] }
async-trait = "0.1.75"
v8 = "0.82.0"
thiserror = "1.0.56"
oauth2 = { version = "5.0.0-alpha.1", features = ["reqwest-blocking"] }
lazy_static = "1.4.0"
tokio-util = "0.7.10"

[dev-dependencies]
mockito = "1.2.0"
