[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
apicize_lib = { version = "0.1.0", path = "../../rust/lib" }
tauri = { version = "1.5.3", features = [ "window-set-title", "fs-read-dir", "notification-all", "fs-write-file", "global-shortcut-all", "fs-exists", "dialog-all", "fs-read-file", "path-all"] }
lazy_static = "1.4.0"
tokio-util = "0.7.10"
tauri-plugin-clipboard = "0.5.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
