[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
apicize_lib = { version = "0.1.0", path = "../../rust/lib" }
tauri = { version = "2.0.0-beta", features = [] }
lazy_static = "1.4.0"
tokio-util = "0.7.10"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
# tauri-plugin-clipboard = "0.5.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", tag = "tauri-v2.0" }
